# Flex

./: .gitignore  CMakeLists.txt  LICENSE
include/Flex/Components/: Component.hpp
include/Flex/Core/: Flex.hpp  PathFinder.hpp  SharedContext.hpp
include/Flex/Core/Components/: Component.hpp  ComponentPool.hpp  Drawable.hpp  Sprite.hpp  Transform.hpp  Velocity2D.hpp
include/Flex/Core/Entities/: Entity.hpp  EntityManager.hpp
include/Flex/Core/Error/: PathFinderError.hpp
include/Flex/Core/Systems/: Movement2DSystem.hpp  Systems.hpp
include/Flex/Core/Worlds/: World.hpp
include/Flex/Entities/: Entity.hpp  SharedContext.hpp
include/Flex/Entity/: Entity.hpp  SharedContext.hpp
include/Flex/Event/: EventHandler.hpp  EventManager.hpp  KeyEventHandler.hpp
include/Flex/Events/: EventBus.hpp  EventHandler.hpp  EventManager.hpp  KeyboardEventHandler.hpp  MouseEventHandler.hpp
include/Flex/Events/Types/: Event.hpp  KeyboardEvents.hpp  MouseEvents.hpp
include/Flex/Filesystem/: Filesystem.hpp
include/Flex/Filesystems/: Filesystem.hpp  PathFinder.hpp
include/Flex/Resources/: ResourceManager.hpp
include/Flex/Scenes/: SceneBase.hpp  SceneManager.hpp
include/Flex/Utilities/: Utility.hpp
include/Flex/Utility/: Utility.hpp
include/Flex/Window/: Window.hpp
src/Flex/Component/: Component.cpp
src/Flex/Components/: Component.cpp
src/Flex/Core/: Flex.cpp  PathFinder.cpp  SharedContext.cpp
src/Flex/Core/Components/: Component.cpp  ComponentPool.cpp  Drawable.cpp  Sprite.cpp  Transform.cpp  Velocity2D.cpp
src/Flex/Core/Entities/: EntityManager.cpp
src/Flex/Core/Error/: PathFinderError.cpp
src/Flex/Core/Systems/: Movement2DSystem.cpp  System.cpp
src/Flex/Core/Worlds/: World.cpp
src/Flex/Entities/: Entity.cpp
src/Flex/Entity/: Entity.cpp
src/Flex/Event/: EventHandler.cpp  EventManager.cpp  KeyEventHandler.cpp
src/Flex/Events/: EventHandler.cpp  EventManager.cpp  KeyboardEventHandler.cpp  MouseEventHandler.cpp
src/Flex/Events/Types/: MouseEvents.cpp
src/Flex/Filesystem/: Filesystem.cpp  PathFinder.cpp
src/Flex/Filesystems/: Filesystem.cpp  PathFinder.cpp
src/Flex/Resources/: ResourceManager.cpp
src/Flex/Scenes/: SceneBase.cpp  SceneManager.cpp
src/Flex/Window/: Window.cpp
src/tinyxml2/: tinyxml2.cpp
